{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 327,
  "lineage": "92390dcc-fb38-3b3f-e86c-a97d5a00c60f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "test-lb-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:649452086333:loadbalancer/test-lb-01",
            "availability_zones": [
              "us-east-1d"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-01-1800319522.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "test-lb-01",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "test-lb-01",
            "security_groups": [
              "sg-0a5fa9a6bcc3c1d93"
            ],
            "source_security_group": "649452086333/test-autoscaling-sg-01",
            "source_security_group_id": "sg-0a5fa9a6bcc3c1d93",
            "subnets": [
              "subnet-07ebbe5b471870eb9"
            ],
            "tags": {
              "Environment": "test",
              "Name": "test-elb-01"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-elb-01"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.test-autoscaling-sg-01",
            "aws_subnet.test-pub-subnet-01",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649452086333:internet-gateway/igw-02d643eeca6456e50",
            "id": "igw-02d643eeca6456e50",
            "owner_id": "649452086333",
            "tags": {
              "Environment": "test",
              "Name": "test-igw-01"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-igw-01"
            },
            "vpc_id": "vpc-01fd6ea70b92f2aa4"
          },
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-pub-rt-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649452086333:route-table/rtb-088a23212af3fdd5a",
            "id": "rtb-088a23212af3fdd5a",
            "owner_id": "649452086333",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d643eeca6456e50",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-pub-rt-01"
            },
            "tags_all": {
              "Name": "test-pub-rt-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fd6ea70b92f2aa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-igw-01",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-rt-association-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf16c1aad67f130f",
            "route_table_id": "rtb-088a23212af3fdd5a",
            "subnet_id": "subnet-07ebbe5b471870eb9"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw-01",
            "aws_route_table.test-pub-rt-01",
            "aws_subnet.test-pub-subnet-01",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-autoscaling-sg-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649452086333:security-group/sg-0a5fa9a6bcc3c1d93",
            "description": "AutoScaling-Security-Group-1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5fa9a6bcc3c1d93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-autoscaling-sg-01",
            "name_prefix": "",
            "owner_id": "649452086333",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01fd6ea70b92f2aa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-pub-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649452086333:subnet/subnet-07ebbe5b471870eb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-07ebbe5b471870eb9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "649452086333",
            "tags": {
              "Name": "test-subnet-01"
            },
            "tags_all": {
              "Name": "test-subnet-01"
            },
            "vpc_id": "vpc-01fd6ea70b92f2aa4"
          },
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649452086333:vpc/vpc-01fd6ea70b92f2aa4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037a608211ec36e21",
            "default_route_table_id": "rtb-0bca385f6b3dac42f",
            "default_security_group_id": "sg-0bb4c5a10bfe55d09",
            "dhcp_options_id": "dopt-a16254db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01fd6ea70b92f2aa4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bca385f6b3dac42f",
            "owner_id": "649452086333",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-01"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-01"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}